hphp/hack/test/typecheck/meth_caller11.php.exp
File "meth_caller11.php", line 31, characters 17-23:
Invalid argument (Typing[4110])
File "meth_caller11.php", line 24, characters 49-49:
Expected `C`
File "meth_caller11.php", line 24, characters 42-44:
But got `int`
